# simplex-2021-demo

./: README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
simplex_2021_demo/: streamlit_app.py
simplex_2021_demo/example_models/: iris.py  simple_projection.py
simplex_2021_demo/example_models/iris/: data.py  model.py
simplex_2021_demo/example_models/simple_projection/: data.py  model.py
simplex_2021_demo/main_logic/: dimensionality_reduction.py  get_latent_representation.py  simplex.py
simplex_2021_demo/ui/: code_input.py  dimensionality_reduction_menu.py  validate_variables.py
simplex_2021_demo/util/: __init__.py  execute_javascript.py  execute_python.py  shift_indices_after_skipping_one.py  update_streamlit_state.py
simplex_2021_demo/visualization/: visualize_decomposition.py  visualize_geometry.py
